crates/ridge-parser/tests/fixtures/errors/p005_const_missing_type.ridge
-- expect: P005
-- Trigger: const declaration missing `: Type` annotation.
const pi = 3
